--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ composer.lock
 # Error logs
 error_log
 debug.log
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
